--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,10 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
+
+
     <script src="lib/d3/d3.min.js"></script>
     <script src="lib/nvd3/nv.d3.js"></script>
     <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
@@ -23,7 +27,7 @@
     <script src="lib/x2js/xml2json.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+   <!--  <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
